# ArxWindows

./: .gitmodules  CMakeLists.txt  README.md
devil/lib/x64/: DevIL.lib  ILU.lib  ILUT.lib
devil/lib/x86/: DevIL.lib  ILUT.lib
directx/: VERSION
freetype/lib/x64/: freetype.lib
freetype/lib/x86/: freetype.lib
installer/: ArxFatalisData.nsh  ArxLibertatis.nsi  BuildAll.bat  BuildInstaller32.bat  BuildInstaller64.bat  MultiUserCustom.nsh  UninstallLog.nsh  arxlibertatis.nsi  buildinstaller_x64.bat  buildinstaller_x86.bat
libs/devil/lib/x86/: ILU.lib
libs/freetype/include/freetype/config/: ftmodule.h  ftoption.h
libs/freetype/lib/x64/: freetype.lib
libs/freetype/lib/x86/: freetype.lib
libs/glm/include/glm/simd/: platform.h
libs/libepoxy/include/epoxy/: common.h  gl_generated.h  wgl_generated.h
libs/libepoxy/lib/x64/: epoxy.lib
libs/libepoxy/lib/x86/: epoxy.lib
libs/opengl/lib/x64/: glew32s.lib
libs/opengl/lib/x86/: glew32s.lib
libs/openssl/include/openssl/: opensslconf.h
libs/sdl/: COPYING.txt
libs/sdl/lib/x64/: SDL.lib
libs/sdl/lib/x86/: SDL.lib
libs/zlib/lib/x64/: zlib.lib
libs/zlib/lib/x86/: zlib.lib
sdl/lib/x86/: SDL.lib
zlib/lib/x64/: zlib.lib
zlib/lib/x86/: zlib.lib
